--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^5.1.0",
     "firebase": "^11.6.1",
@@ -53,6 +54,7 @@
     "lucide-react": "^0.462.0",
     "motion": "^12.9.1",
     "next-themes": "^0.3.0",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
