--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-"washitek-49eef-firebase-adminsdk-fbsvc-1e79ae5a3d.json" 
+washitek-49eef-firebase-adminsdk-fbsvc-4b31cb322c.json
