--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ dist-ssr
 *.sln
 *.sw?
 washitek-49eef-firebase-adminsdk-fbsvc-4b31cb322c.json
+"washitek-49eef-firebase-adminsdk-fbsvc-4b31cb322c.json" 
